--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://noblelar.github.io/robofriends",
-  "name": "robofriends",
+  "homepage": "https://Paa-Willie.github.io/robopro",
+  "name": "robopro",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
